# block-decomposition

./: Cargo.toml  README.md
src/: block.rs  decompose_0.rs  decompose_1.rs  decompose_2.rs  decompose_3.rs  decomposition_element.rs  enumerate.rs  main.rs
